--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -5,4 +5,5 @@
   <p><%= link_to port_i.title, portfolio_path(port_i) %><p>
   <%= image_tag port_i.thumb_image unless port_i.thumb_image.nil?  %>  
 <%= link_to 'Edit', edit_portfolio_path(port_i) %>
+<%= link_to 'Destroy port', portfolio_path(port_i), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
