--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -6,6 +6,15 @@
     <%= form.text_field :title %>
   </div>
 
+  <ul>
+   <%= form.fields_for :technologies do |technology_form| %>
+    <li>
+        <%= technology_form.label :name %>
+        <%= technology_form.text_field :name %>
+    </li>
+  <% end %>
+  </ul>
+
   <div class="actions">
     <%= form.submit %>
   </div>
