--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -2,3 +2,8 @@
 
 <%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil?  %> 
 <%= link_to 'Edit', edit_portfolio_path(@portfolio_item.id) %>
+
+<h2>Technologies Used:</h2>
+    <% @portfolio_item.technologies.each do |t| %>
+        <p><%= t.name %> </p>
+    <% end %>
