session track from outside

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
       <%= link_to 'Register', new_user_registration_path %>
     <% end %>
 
+    <% if session[:source] %>
+         <p> Thanks for visit me from <%= session[:source] %> </p>
+    <% end %>
 
     <%= yield %>
   </body>
