--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -28,12 +28,7 @@
 
     <%= yield %>
 
-    <div>
-      <div><%= link_to "Homepage", root_path %></div>
-      <div><%= link_to "About", about_me_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blog", blogs_path %></div>
-      <div><%= link_to "Portfolio", portfolios_path %></div>
-    </div>
+    <%=  render 'shared/nav' %>
+    
   </body>
 </html>
