--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -14,6 +14,8 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    
+
 
     <% if current_user.is_a?(User) %>
       <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
@@ -27,8 +29,7 @@
     <% end %>
 
     <%= yield %>
-
-    <%=  render 'shared/nav' %>
+  <%=  render 'shared/nav', location: 'bottom'  %>
     
   </body>
 </html>
