--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,12 +1,3 @@
 <h1>Edit this portfolio item</h1>
 
-<%= form_with(model: @portfolio_item, local: true) do |form| %>
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+<%= render 'form', portfolio_item: @portfolio_item %>
