--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
      
-    <meta name="keywords" content="<%= @seo_keywords%>" />
+    <meta name="keywords" content="<%= @seo_keywords %>" />
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -17,16 +17,7 @@
 
      <%=  render 'shared/nav', location: 'top' %>
 
-    <% if current_user.is_a?(User) %>
-      <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to 'Login', new_user_session_path %>
-      <%= link_to 'Register', new_user_registration_path %>
-    <% end %>
-
-    <% if session[:source] %>
-         <p> Thanks for visit me from <%= session[:source] %> </p>
-    <% end %>
+    <%= login_helper %>
 
     <%= yield %>
   </body>
