source helper to blog, app, portf

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,14 +19,9 @@
 
     <%= login_helper %>
 
-
-    <% if session[:source] %>
-         <p> Thanks for visit me from <%= session[:source] %> </p>
-    <% end %>
+    <%= source_helper %>
 
     <%= yield %>
-
-  
-
+    
   </body>
 </html>
