--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,9 +17,7 @@
     
     <%= login_helper %>
 
-    <% if session[:source] %>
-         <p> Thanks for visit me from <%= session[:source] %> </p>
-    <% end %>
+    <%= source_helper %>
 
     <%= yield %>
   <%=  render 'shared/nav', location: 'bottom'  %>
