--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,19 +1,23 @@
-<%= form_with(model: @portfolio_item, local: true) do |form| %>
+<%= form_with(model: @portfolio_item, local: true) do |f| %>
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
   </div>
 
-  <ul>
-   <%= form.fields_for :technologies do |technology_form| %>
-    <li>
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name %>
-    </li>
-  <% end %>
-  </ul>
+  <div class="field">
+    <h2>Technologies used</h2>
+    <div>
+      <%= f.fields_for :technologies do |technology_form| %>
+          <%= render 'technology_fields', f: technology_form %>
+      <% end %>
+      <div>
+        <%= link_to_add_association 'Add technology', f, :technologies %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
   </div>
+  
 <% end %>
