--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -13,8 +13,9 @@
 
   <%= render 'comments/comment_form' %>
 
-  <%= render @blog.comments %>
-
+  <div id="comments" data-blog-id="<%= @blog.id %>">
+    <%= render @blog.comments %>
+  </div>
   <%= link_to 'Edit', edit_blog_path(@blog) %> |
   <%= link_to 'Back', blogs_path %>
 </div>
