--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,8 +1,8 @@
 <% unless current_user.is_a?(GuestUser) %>
     <%= form_for @comment, url: '#' do |f| %>
-        <div>
-            <%=f.label :content %>
-            <%= f.text_area :content %>
+        <div class="form-group">
+            <%= f.label :content %>
+            <%= f.text_area :content, class: "form-control" %>
         </div>
 
         <%= f.submit "Post comment"%>
