--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -15,6 +15,18 @@
     <%= form.text_field :title, placeholder: "Title" %>
   </div>
 
+   <div class="field">
+    <%= form.label :topic_id %>
+    <%= form.collection_select(:topic_id, Topic.all, :id, :title,
+                            {
+                              selected: blog.topic.id,
+                              include_blank: true
+                            },
+                            class: "form-control"
+                            )  
+    %>
+    </div>
+
   <div class="field">
     <%= form.text_area :body, placeholder: "Content" %>
   </div>
