--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -27,6 +27,13 @@
     %>
     </div>
 
+    <div class="field">
+      <%= form.radio_button :status, 'draft'%>
+      <%= form.label :status, 'Draft'%>
+      <%= form.radio_button :status, 'published'%>
+      <%= form.label :status, 'Published'%>
+    </div>
+
   <div class="field">
     <%= form.text_area :body, placeholder: "Content" %>
   </div>
