--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,10 +5,18 @@
     <strong>Title:</strong>
     <%= @blog.title %>
   </p>
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <%= link_to 'Home', root_path %>
+      <%= link_to @blog.topic.title, topic_path( @blog.topic) %>
+      <span class="breadcrumb-item active" aria-current="page"><%= @blog.title %></span>
 
-  <p>
-    <%= @blog.topic.title %>
-  </p>
+      <span class="pull-right" >
+        <%= link_to 'edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>      
+      </span>     
+
+    </ol>
+  </nav>
 
   <p>
     <strong>Body:</strong>
@@ -20,7 +28,6 @@
   <div id="comments" data-blog-id="<%= @blog.id %>">
     <%= render @blog.comments %>
   </div>
-  <%= link_to 'Edit', edit_blog_path(@blog) %> |
   <%= link_to 'Back', blogs_path %>
 </div>
 
